# Anomaly_Transformers

./: .$Architecture.drawio.bkp  .$Architecture.drawio.dtmp  Architecture V2.drawio  Architecture.drawio  Dockerfile  Dockerfile-gpu  Makefile  README.md  docker-compose-gpu.yaml  docker-compose.yaml  example_feature.shp  pyproject.toml  requirements.txt
dataset/: sentense_data.csv  sentense_data.xlsx  sentense_data_LS.json
src/: AUC_plot.py  BERT_Traning_trans.py  CAE_Cluster.py  Cap2Token.py  Debuguat.py  Evaluate_Caption.py  Evaluate_Sentiment.py  Experiment_MaskedProb.py  ExtractLayers.py  Extract_VidFrame.py  FFT_plot.py  Gen_Signal.py  Masking_image.py  Object_detectionYOLO.py  Predict_Caption.py  Predict_Focus_ResNet50_gpu.py  Predict_Focus_VED.py  Predict_Focus_VED_cuda.py  Predict_Focus_VED_v3.py  Predict_trans.py  Prepare_captioning_data.py  Prepare_classification_data.py  RandomMasked.py  SegformerLadnscape.py  SegmentMainObj.py  Segmentation_Training.py  Trad_Inference_Resnet50.py  Trad_Training_Resnet50.py  Training_Focsu_VED_v2.py  Training_Focus_VED.py  Training_Focus_VED_gpuv5.py  Training_Focus_VED_v2.py  Training_Focus_VED_v3.py  Training_Focus_VED_v4.py  Traning_trans.py  Unsupervised_NN.py  VED_Training.py  VED_traingpu.py  check_param.py  kmeans_model.pkl  (+5 more)
